--- a/docs/man/man9/hm2_pci.asciidoc
+++ b/docs/man/man9/hm2_pci.asciidoc
@@ -8,18 +8,18 @@
 :man version : 
 
 == NAME
-hm2_pci - LinuxCNC HAL driver for the Mesa Electronics PCI-based Anything IO boards, with HostMot2 firmware.
+**hm2_pci** - Machinekit HAL driver for the Mesa Electronics PCI-based Anything IO boards, with HostMot2 firmware.
 
 
 == SYNOPSIS
-**loadrt hm2_pci [config=**__"str[,str...]"__**]**
+**loadrt hm2_pci** __[config=**"str[,str...]"**]__
 
-**config** [default: ""]
-HostMot2 config strings, described in the hostmot2(9) manpage.
+**config** __[default: ""]__
+HostMot2 config strings, described in the hostmot2 manpage.
 
 == DESCRIPTION
-hm2_pci is a device driver that interfaces Mesa's PCI and PC-104/Plus
-based Anything I/O boards (with the HostMot2 firmware) to the LinuxCNC
+**hm2_pci** is a device driver that interfaces Mesa's PCI and PC-104/Plus
+based Anything I/O boards (with the HostMot2 firmware) to the Machinekit
 HAL.
 
 The supported boards are: the 5i20, 5i22, and 5i23 (all on PCI); the
