--- a/docs/man/man9/delayline.asciidoc
+++ b/docs/man/man9/delayline.asciidoc
@@ -9,13 +9,13 @@
 
 == NAME
 
-delayline - buffer for delaying pins
+**delayline** - buffer for delaying pins
 
 == SYNOPSIS
-loadrt delayline names=foo,bar max_delay=500,2500 samples=ffb,ffbsu
+**loadrt delayline** __names=foo,bar max_delay=500,2500 samples=ffb,ffbsu__
 
 == DELAYLINE
-The delayline will sample the value of an input pin, and put the sample
+The **delayline** will sample the value of an input pin, and put the sample
 in the output pin after a certain amount of periods.
 
 With this component it is possible to attach with another component to
@@ -38,16 +38,22 @@ The pins of the component are created in a HAL section of the ring buffer
 thus making the values of the pins available thru attaching to the ring.
 
 == THREADS
-delayline.**sample** use like: __addf delayline.sample realtime-thread__
-
+**delayline.sample** use like: 
+[source,bash]
+----
+addf delayline.sample realtime-thread
+----
 [indent=4]
 ====
 To be called by a thread to be executed. This function puts the sample
 from a pin into the buffer.
 ====
 
-delayline.**output** use like: __addf delayline.output realtime-thread__
-
+**delayline.output** use like: 
+[source,bash]
+----
+addf delayline.output realtime-thread
+----
 [indent=4]
 ====
 To be called by a thread to be executed. This function reads the
@@ -59,15 +65,15 @@ delay) will be dropped.
 
 == PINS
 
-delayline.**enable** bit in
+**delayline.enable** bit in
 
 [indent=4]
 ====
-Enables the delayline, when not enabled, the input sample is set
+Enables the **delayline**, when not enabled, the input sample is set
 directly to the output pin.
 ====
 
-delayline.**abort** bit in
+**delayline.abort** bit in
 
 [indent=4]
 ====
@@ -75,14 +81,14 @@ This flushes the buffer. The user is responsible for whether this
 pin is attached.
 ====
 
-delayline.**delay** float in
+**delayline.delay** float in
 
 [indent=4]
 ====
 The delay in thread periods.
 ====
 
-delayline.__{type}__**-in**__{N}__ the input sample pin
+**delayline**.__{type}__**-in**__{N}__ the input sample pin
 
 [indent=4]
 ====
@@ -94,10 +100,10 @@ line, so flt-in2 is the pin that is generated after bit-in1.
 The input sample pin is matched by output sample pin.
 
 **delayline.flt-in0** is the source of the delayed
-delayline.flt-out0 pin
+**delayline**.flt-out0 pin
 ====
 
-delayline.__{type}__**-out**__{N}__ the input sample pin
+**delayline**.__{type}__**-out**__{N}__ the input sample pin
 
 [indent=4]
 ====
@@ -108,25 +114,25 @@ line, so flt-out2 is the pin that is generated after bit-out1.
 
 The output sample pin is matched by input sample pin
 
-**delayline.flt-out0 **is the delay of the delayline.flt-out0
+**delayline.flt-out0 **is the delay of the **delayline**.flt-out0
 input sample
 ====
 
-delayline.**write-fail** u32 out
+**delayline.write-fail** u32 out
 
 [indent=4]
 ====
 counter of failed writes
 ====
 
-delayline.**read-fail** u32 out
+**delayline.read-fail** u32 out
 
 [indent=4]
 ====
 counter of failed reads
 ====
 
-delayline.**too-old** u32 out
+**delayline.too-old** u32 out
 
 [indent=4]
 ====
