--- a/docs/man/man9/hm2_7i43.asciidoc
+++ b/docs/man/man9/hm2_7i43.asciidoc
@@ -8,11 +8,10 @@
 :man version : 
 
 == NAME
-hm2_7i43 - LinuxCNC HAL driver for the Mesa Electronics 7i43 EPP Anything IO board with HostMot2 firmware.
+**hm2_7i43** - Machinekit HAL driver for the Mesa Electronics 7i43 EPP Anything IO board with HostMot2 firmware.
 
 == SYNOPSIS
-**loadrt hm2_7i43 [ioaddr=**__N__**[,**__N__**...]] [ioaddr_hi=**__N__**[,**__N__**...]] [epp_wide=**__N__**[,**__N__**...]] [config=**__"str[,str...]"__**] [debug_epp=**__N__**[,**__N__**...]]
-**
+**loadrt hm2_7i43** __[ioaddr=**N**[,**N**...]] [ioaddr_hi=**N**[,**N**...]] [epp_wide=**N**[,**N**...]] [config=**"str[,str...]"**] [debug_epp=**N**[,**N**...]]__
 
 **ioaddr** [default: 0x378]
 
@@ -55,8 +54,8 @@ transfers.
 ====
 
 == DESCRIPTION
-hm2_7i43 is a device driver that interfaces the Mesa 7i43 board with
-the HostMot2 firmware to the LinuxCNC HAL.  Both the 200K and the 400K
+**hm2_7i43** is a device driver that interfaces the Mesa 7i43 board with
+the HostMot2 firmware to the Machinekit HAL.  Both the 200K and the 400K
 FPGAs are supported.
 
 The driver talks with the 7i43 over the parallel port, not over USB.  USB
@@ -71,9 +70,15 @@ in the **config** modparam, as described in the hostmot2(9) manpage,
 in the __config modparam__ section.
 
 Some parallel ports require special initialization before they can be
-used.  LinuxCNC provides a kernel driver that does this initialization
-called probe_parport.  Load this driver before loading hm2_7i43, by
-putting "loadrt probe_parport" in your .hal file.
+used.  Machinekit provides a kernel driver that does this initialization
+called probe_parport.  Load this driver before loading **hm2_7i43**, by
+putting this in your .hal file.
+[source, hal]
+----
+loadrt probe_parport
+----
+
+
 
 
 == Jumper settings
@@ -86,7 +91,7 @@ is active.  This is done by setting jumper W7 up, ie away from the edge
 of the board.
 
 == Communicating with the board
-The 7i43 communicates with the LinuxCNC computer over EPP, the Enhanced
+The 7i43 communicates with the Machinekit computer over EPP, the Enhanced
 Parallel Port.  This provides about 1 MBps of throughput, and the
 communication latency is very predictable and reasonably low.
 
@@ -94,13 +99,15 @@ The parallel port must support EPP 1.7 or EPP 1.9.  EPP 1.9 is prefered,
 but EPP 1.7 will work too.  The EPP mode of the parallel port is sometimes
 a setting in the BIOS.
 
-Note that the popular "NetMOS" aka "MosChip 9805" PCI parport cards **do
+Note that the very old "NetMOS" "MosChip 9805 and 9815" PCI parport cards **do
 **not work.  They do not meet the EPP spec, and cannot be reliably used
-with the 7i43.  You have to find another card, sorry.
+with the 7i43.  
+
+The later chips (eg. MCS9901) are claimed to meet EPP 1.9 and may be OK.
 
 EPP is very reliable under normal circumstances, but bad cabling
 or excessively long cabling runs may cause communication timeouts.
-The driver exports a parameter named hm2_7i43.<BoardNum>.io_error to
+The driver exports a parameter named **hm2_7i43**.<BoardNum>.io_error to
 inform HAL of this condition.  When the driver detects an EPP timeout,
 it sets io_error to True and stops communicating with the 7i43 board.
 Setting io_error back to False makes the driver start trying to
