--- a/docs/man/man9/kins.asciidoc
+++ b/docs/man/man9/kins.asciidoc
@@ -9,7 +9,7 @@
 
 
 == NAME
-kins - kinematics definitions for LinuxCNC
+**kins** - kinematics definitions for Machinekit
 
 
 == SYNOPSIS
@@ -24,7 +24,7 @@ kins - kinematics definitions for LinuxCNC
 
 == DESCRIPTION
 Rather than exporting HAL pins and functions, these components provide the
-forward and inverse kinematics definitions for LinuxCNC.
+forward and inverse kinematics definitions for Machinekit.
 
 == trivkins - Trivial Kinematics
 There is a 1:1 correspondence between joints and axes.  Most standard milling
@@ -37,9 +37,9 @@ The X and Y axes are rotated 45 degrees compared to the joints 0 and 1.
 The joints represent the distance of the controlled point from three predefined
 locations (the motors), giving three degrees of freedom in position (XYZ)
 
-tripodkins.Bx
-tripodkins.Cx
-tripodkins.Cy
+tripodkins.Bx +
+tripodkins.Cx +
+tripodkins.Cy +
 The location of the three motors is (0,0), (Bx,0), and (Cx,Cy)
 
 == genhexkins - Hexapod Kinematics
@@ -48,23 +48,26 @@ location of the motors is defined at compile time.
 
 == maxkins - 5-axis kinematics example
 Kinematics for Chris Radek's tabletop 5 axis mill named 'max' with tilting
-head (B axis) and horizintal rotary mounted to the table (C axis).  Provides
-UVW motion in the rotated coordinate system.  The source file, maxkins.c,
-may be a useful starting point for other 5-axis systems.
+head (B axis) and horizintal rotary mounted to the table (C axis). +
+Provides UVW motion in the rotated coordinate system.  
+
+The source file, maxkins.c, may be a useful starting point for other 5-axis systems.
 
 == genserkins - generalized serial kinematics
 Kinematics that can model a general serial-link manipulator with up to 6
 angular joints.  
 
 The kinematics use Denavit-Hartenberg definition for the joint and
-links. The DH definitions are the ones used by John J Craig in
-"Introduction to Robotics: Mechanics and Control" The parameters for the
+links. +
+The DH definitions are the ones used by John J Craig in
+"Introduction to Robotics: Mechanics and Control" +
+The parameters for the
 manipulator are defined by hal pins.
 
-genserkins.A-__N
-__genserkins.ALPHA-__N
-__genserkins.D-__N
-__Parameters describing the __N__th joint's geometry.
+**genserkins**.A-__N__ +
+**genserkins**.ALPHA-__N__ +
+**genserkins**.D-__N__ +
+are parameters describing the __N__th joint's geometry.
 
 == pumakins - kinematics for puma typed robots
 Kinematics for a puma-style robot with 6 joints
@@ -83,7 +86,7 @@ Describe the geometry of the robot
 Vertical distance from the ground plane to the center of the inner arm.
 
 === scarakins.D2
-Horizontal distance between joint[0] axis and joint[1] axis, ie.  the
+Horizontal distance between **joint[0]** axis and **joint[1]** axis, ie.  the
 length of the inner arm.
 
 === scarakins.D3
@@ -92,7 +95,7 @@ outer arm.  May be positive or negative depending on the structure of
 the robot.
 
 === scarakins.D4
-Horizontal distance between joint[1] axis and joint[2] axis, ie.  the
+Horizontal distance between **joint[1]** axis and **joint[2]** axis, ie.  the
 length of the outer arm.
 
 === scarakins.D5
@@ -100,10 +103,9 @@ Vertical distance from the end effector to the tooltip.  Positive means
 the tooltip is lower than the end effector, and is the normal case.
 
 === scarakins.D6
-Horizontal distance from the centerline of the end effector (and the
-joints 2 and 3 axis) and the tooltip.  Zero means the tooltip is on the
-centerline.  Non-zero values should be positive, if negative they
-introduce a 180 degree offset on the value of joint[3].
+Horizontal distance from the centerline of the end effector (and **joint[2] and **joint[3]** axis) and the tooltip. +
+Zero means the tooltip is on the centerline. + 
+Non-zero values should be positive, if negative they introduce a 180 degree offset on the value of joint[3].
 
 == SEE ALSO
 __Kinematics__ section in the Machinekit documentation
